--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Palettor</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="app.min.css">
 </head>
 <body>
 </body>
-<script src="app.js"></script>
+<script src="app.min.js"></script>
 </html>
