--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Palettor</title>
-  <link rel="stylesheet" href="app.min.css">
-</head>
-<body>
-</body>
-<script src="app.min.js"></script>
+  <head>
+    <meta charset="UTF-8">
+    <title>Palettor</title>
+    <link rel="stylesheet" href="app.min.css">
+  </head>
+  <body>
+    <div id="app">
+    </div>
+  </body>
+  <script src="app.min.js"></script>
 </html>
